# otus3

./: .gitignore  CMakeLists.txt  detached.cmake  ip_filter2.tsv  main.cpp  test_version.cpp  version_arg.h.in
.github/workflows/: release.yml
db/: CMakeLists.txt  db.cpp  db.h  dummy_connection.cpp  dummy_connection.h
helloworld/: CMakeLists.txt  lib.cpp
version/: CMakeLists.txt  version.cpp
